debugged snippet system, and fixed off by some whitespace issues. Need whitespace css rules set to pre-wrap

--- a/informly-styles.css
+++ b/informly-styles.css
@@ -4,6 +4,11 @@ h1.informly-heading{
     font-size: 14pt !important;
 }
 
+span.informly-ghost-span{
+    white-space: pre-wrap;
+}
+
+
 .informly-info-container{
     position: absolute;
     font-family: Arial, Helvetica, sans-serif;
